--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "aiosqlite>=0.21.0",
     "fastapi>=0.122.0",
+    "fastapi-users[sqlalchemy]>=15.0.1",
+    "imagekitio>=4.2.0",
     "python-dotenv>=1.2.1",
+    "uvicorn[standard]>=0.38.0",
 ]
